--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --mode development --watch",
+    "start": "webpack serve",
     "build": "webpack --mode production"
   },
   "repository": {
@@ -28,7 +28,8 @@
     "html-webpack-plugin": "^5.2.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.24.0",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "react": "^17.0.1",
